--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,6 @@
 /public/uploads
 
 /config/credentials.yml.enc
+config/settings.local.yml
+config/settings/*.local.yml
+config/environments/*.local.yml
