--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,5 @@ config/settings/*.local.yml
 config/environments/*.local.yml
 
 /config/credentials/development.key
+
+/config/credentials/production.key
