--- a/.gitignore
+++ b/.gitignore
@@ -46,3 +46,5 @@ config/environments/*.local.yml
 /config/credentials/development.key
 
 /config/credentials/production.key
+
+/config/credentials/environment.key
