add: 本番環境でのGoogleログイン実装

--- a/config/settings/production.yml
+++ b/config/settings/production.yml
@@ -1,3 +1,5 @@
 default_url_options:
   protcol: 'https'
   host: 'sakananet.onrender.com'
+sorcery:
+  google_callback_url: 'https://www.sakana-net.com/oauth/callback?provider=google'
