--- a/config/settings/production.yml
+++ b/config/settings/production.yml
@@ -1,5 +1,5 @@
 default_url_options:
-  protcol: 'https'
-  host: 'sakananet.onrender.com'
+  protocol: 'https'
+  host: 'www.sakana-net.com'
 sorcery:
   google_callback_url: 'https://www.sakana-net.com/oauth/callback?provider=google'
