--- a/config/settings/development.yml
+++ b/config/settings/development.yml
@@ -2,3 +2,4 @@ default_url_options:
   host: 'localhost:3000'
 sorcery:
   google_callback_url: 'http://localhost:3000/oauth/callback?provider=google'
+  line_callback_url: 'https://4e91-2405-6587-6800-2d00-858a-e8a2-115a-58b6.ngrok-free.app/oauth/callback?provider=line'
