--- a/compose.yml
+++ b/compose.yml
@@ -20,10 +20,15 @@ services:
       - node_modules:/app/node_modules
     environment:
       TZ: Asia/Tokyo
+      SELENIUM_DRIVER_URL: http://chrome:4444/wd/hub
     ports:
       - "3000:3000"
     depends_on:
       - db
+  chrome:
+    image: seleniarm/standalone-chromium:latest
+    ports:
+      - 4444:4444
 volumes:
   postgres_data:
   bundle_data:
