--- a/compose.yml
+++ b/compose.yml
@@ -1,6 +1,6 @@
 services:
   db:
-    image: postgres:latest
+    image: postgres:16
     platform: linux/amd64
     environment:
       TZ: Asia/Tokyo
